[package]
name = "gruglb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "env"] }
log = "0.4.20"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.49"
tracing = "0.1.37"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = "0.3.17"
