[package]
name = "gruglb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.6", features = ["derive", "env"] }
dashmap = "5.5.3"
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.49"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.37"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = "0.3.17"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
